Complete CNNPlayer