@@ -1,53 +1,57 @@
-package de.hexgame.nn;
+package de.hexgame.nn.training;
 
 import de.hexgame.logic.Game;
 import de.hexgame.logic.GameState;
 import de.hexgame.logic.Player;
+import de.hexgame.nn.CNNPlayer;
+import de.hexgame.nn.Model;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.nd4j.linalg.dataset.MultiDataSet;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.List;
+import java.io.File;
 import java.util.concurrent.atomic.AtomicInteger;
 
 @Slf4j
 public class Trainer implements Runnable {
-    private static final int GAME_COUNT = 100;
-    private static final Path MODEL_PATH = Path.of("model.zip");
+    private static final int GAMES_PER_ITERATION = 100;
+    private static final int EXPERIENCE_BUFFER_SIZE = 50_000;
+    private static final int BATCHES_PER_ITERATION = 500;
+    private static final File MODEL_FILE = new File("model.zip");
+    private static final File EXPERIENCE_FILE = new File("experience.bin");
 
-    private final List<MultiDataSet> dataSetList = new ArrayList<>(2000);
+    private final ExperienceBuffer experienceBuffer = new ExperienceBuffer(EXPERIENCE_BUFFER_SIZE);
     private final AtomicInteger gameCounter = new AtomicInteger(0);
     private Model model;
 
     @SneakyThrows
     @Override
     public void run() {
-        if (Files.exists(MODEL_PATH)) {
-            model = new Model(MODEL_PATH.toFile(), true);
+        if (MODEL_FILE.exists()) {
+            model = new Model(MODEL_FILE, true);
         } else {
             model = new Model();
+        }
+        if (EXPERIENCE_FILE.exists()) {
+            experienceBuffer.load(EXPERIENCE_FILE);
         }
         model.start();
         while (true) {
             log.info("Generating training data...");
-            generateDataSet();
+            simulateGames();
+            experienceBuffer.save(EXPERIENCE_FILE);
             log.info("Fitting the model...");
             fitModel();
-            model.save(MODEL_PATH.toFile());
+            model.save(MODEL_FILE);
         }
     }
 
     @SneakyThrows
-    private void generateDataSet() {
+    private void simulateGames() {
         gameCounter.set(0);
-        final int threadCount = Runtime.getRuntime().availableProcessors();
+        final int threadCount = GAMES_PER_ITERATION;
         Thread[] threads = new Thread[threadCount];
         for (int i = 0; i < threadCount; i++) {
-            threads[i] = new Thread(this::simulationTask);
-            threads[i].start();
+            threads[i] = Thread.ofVirtual().start(this::simulationTask);
         }
         for (int i = 0; i < threadCount; i++) {
             threads[i].join();
@@ -55,7 +59,7 @@ public class Trainer implements Runnable {
     }
 
     private void fitModel() {
-        model.fit(MultiDataSet.merge(dataSetList), 3);
+        model.fit(experienceBuffer, BATCHES_PER_ITERATION);
     }
 
     @SneakyThrows
@@ -68,13 +72,13 @@ public class Trainer implements Runnable {
         Game game = new Game(gameState, playerA, playerB);
         game.addPlayerWinListener(winner -> {
             synchronized (this) {
-                gameDataA.extractDataSets(winner == playerA, model, dataSetList);
-                gameDataB.extractDataSets(winner == playerB, model, dataSetList);
+                gameDataA.extractDataSets(winner == playerA, model, experienceBuffer::add);
+                gameDataB.extractDataSets(winner == playerB, model, experienceBuffer::add);
             }
         });
 
         int gameNumber;
-        while ((gameNumber = gameCounter.incrementAndGet()) <= GAME_COUNT) {
+        while ((gameNumber = gameCounter.incrementAndGet()) <= GAMES_PER_ITERATION) {
             game.run();
             gameDataA.clear();
             gameDataB.clear();
